fix#80: add option to select queue as league on blob page
